--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Long";
+  src: url("/fonts/long.woff");
+}
+
+@font-face {
+  font-family: "Round";
+  src: url("/fonts/round.woff");
+}
+
+@font-face {
+  font-family: "Round Bold";
+  font-weight: bold;
+  src: url("/fonts/round-bold.woff");
+}
+
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -15,9 +31,23 @@ body {
   overscroll-behavior: none;
 }
 
+@theme {
+  --font-sans: "Round", sans-serif;
+  --font-long: "Long", sans-serif;
+  --font-round-bold: "Round Bold", sans-serif;
+  --color-yellow: #fff9cb;
+  --color-pink: #ffb0c4;
+  --breakpoint-sm: 40rem;
+  --breakpoint-xs: 20rem;
+  --breakpoint-3xl: 120rem;
+}
+
 @layer utilities {
   .flex-center {
-    @apply flex items-center justify-center;
+    @apply flex justify-center items-center;
+  }
+  .col-center {
+    @apply flex flex-col justify-center items-center;
   }
 }
 
@@ -28,4 +58,55 @@ body {
   nav {
     @apply fixed top-0 left-0 w-full flex justify-between items-center md:p-16 p-5 z-[100];
   }
+
+  .mask-wrapper {
+    mask-image: url("/images/big-hero-text.svg");
+    mask-repeat: no-repeat;
+    /* mask-size: contain;
+    mask-position: center; */
+  }
+
+  .hero-section {
+    @apply w-dvw h-dvh relative overflow-hidden;
+
+    .scale-out {
+      @apply object-cover md:scale-125 h-full;
+    }
+    .title-logo {
+      @apply absolute h-full md:scale-125 top-0 object-cover;
+    }
+    .trailer-logo {
+      @apply absolute -bottom-5 w-48 left-1/2 -translate-x-1/2;
+    }
+    .play-img {
+      @apply rounded-full md:size-28 size-20 bg-white absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex justify-center items-center;
+    }
+    .fake-logo-wrapper {
+      @apply absolute z-50 xs:top-[9.5rem] sm:top-[12.8rem] md:top-[8.5rem] 2xl:top-44 3xl:top-48 left-1/2 -translate-x-1/2;
+    }
+    .overlay-logo {
+      @apply size-full object-cover opacity-0 w-60 md:w-60 2xl:w-72 3xl:w-80;
+    }
+  }
+
+  .entrance-message {
+    @apply absolute inset-0 w-full h-dvh overflow-hidden z-20 opacity-100;
+
+    .entrance-logo {
+      @apply 2xl:w-72 3xl:w-80 md:w-60 w-48 absolute xs:top-[9.5rem] sm:top-[12.8rem] md:top-[8.5rem] 2xl:top-44 3xl:top-48 left-1/2 -translate-x-1/2;
+    }
+    .text-wrapper {
+      @apply mt-68 md:mt-84 2xl:mt-80 3xl:mt-84;
+    }
+  }
+
+  .gradient-title {
+    @apply md:text-[5rem] text-[3rem] font-round-bold !font-extrabold uppercase md:leading-[4.5rem] leading-[3rem] text-center bg-gradient-to-r from-pink-400 via-red-400 to-orange-400 bg-clip-text text-transparent;
+  }
+}
+
+.entrance-message {
+  mask-image: radial-gradient(circle at 50% 100vh, black 0%, transparent 0%);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
 }
